--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "eslint": "^5.12.1",
+    "eslint-plugin-react": "^7.12.4",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
+    "prettier-eslint": "^8.8.2",
     "react-test-renderer": "16.6.3"
   },
   "jest": {
